# VBFeditor

./: CMakeLists.txt  README.md
VbfEditor/: CMakeLists.txt  VbfFile.cpp  VbfFile.h  main.cpp  vbfeditor.cpp
VbfEditor/lib/: lzss.cpp  lzss.hpp  vbf.cpp  vbf.h
lzss/: brute.c  lzlocal.h  lzss.c
lzss/bitfile/: bitfile.c
lzss/optlist/: sample.c
